filegroup(
    name = "test_configs",
    srcs = [
        "test_config.json",
    ],
)


py_binary(
    name = "py_claid",
    srcs = glob(["**/*.py"]),
    deps = [

    ],
    data = [
        "//dispatch/core:claid_capi",
        ":test_configs",
        "//dispatch/proto:claidservice_py_proto",
        "//dispatch/proto:claidservice_py_grpc"
    ],
)


