package(default_visibility = ["//visibility:public"])






cc_library(
    name = "android_tflite",
    srcs = ["tflite.cc"],
    deps = [
        ":tflite",
    ],
)


config_setting(
    name = "armeabi-v7a",
    values = {
      "cpu": "armeabi-v7a"
    },
)

config_setting(
    name = "arm64-v8a",
    values = {
      "cpu": "arm64-v8a"
    },
)

config_setting(
    name = "x86",
    values = {
      "cpu": "x86"
    },
)
config_setting(
    name = "x86_64",
    values = {
      "cpu": "x86_64"
    },
)

cc_library(
    name = "tflite",
    srcs = ["TensorFlowLiteNNInstance.cc", "TensorFlowLiteNNInstance.hh"],
    hdrs = glob(["*.hh", "tf_inc/**/*.h"]),
    linkopts = select({
      ":x86": ["-ltensorflowlite", "-L/home/lastchance/Desktop/claid_external/libs/android/x86"],
      ":armeabi-v7a": ["-ltensorflowlite", "-L/home/lastchance/Desktop/claid_external/libs/android/armeabi-v7a"],
      ":arm64-v8a": ["-ltensorflowlite", "-L/home/lastchance/Desktop/claid_external/libs/android/arm64-v8a"],
      ":x86_64": ["-ltensorflowlite", "-L/home/lastchance/Desktop/claid_external/libs/android/x86_64"],
      "//conditions:default" : ["-ltensorflowlite", "-L/home/lastchance/Desktop/claid_external/libs/host", "-Iexternal/tensorflow"],
    }),
    includes = ["tf_inc/"],
    copts = ["-Itf_inc/"],
    deps = ["//dispatch/core:CLAID"],
    linkstatic = True,
    alwayslink = True,
)
