package(default_visibility = ["//visibility:public"])





cc_library(
    name = "android_tflite",
    srcs = ["tflite.cc"],
    deps = [
        ":tflite",
    ],
)


config_setting(
    name = "armeabi-v7a",
    values = {
      "cpu": "armeabi-v7a"
    },
)

config_setting(
    name = "arm64-v8a",
    values = {
      "cpu": "arm64-v8a"
    },
)

config_setting(
    name = "x86",
    values = {
      "cpu": "x86"
    },
)
config_setting(
    name = "x86_64",
    values = {
      "cpu": "x86_64"
    },
)


current_path = ""
cc_library(
    name = "tflite",
    srcs = ["TensorFlowLiteNNInstance.cc", "TensorFlowLiteNNInstance.hh"] +
    select({
      ":x86": ["build_tensorflow/libs/android/x86/libtensorflowlite.so"],
      ":armeabi-v7a": ["build_tensorflow/libs/android/armeabi-v7a/libtensorflowlite.so"],
      ":arm64-v8a": ["build_tensorflow/libs/android/arm64-v8a/libtensorflowlite.so"],
      ":x86_64": ["build_tensorflow/libs/android/x86_64/libtensorflowlite.so"],
      "//conditions:default" : ["build_tensorflow/libs/host/libtensorflowlite.so"],
    }),
    hdrs = glob(["*.hh", "build_tensorflow/tfinc/**/*.h"]),
    # linkopts = select({
    #   ":x86": ["-ltensorflowlite", "-Lbuild_tensorflow/libs/android/x86"],
    #   ":armeabi-v7a": ["-ltensorflowlite", "-Lbuild_tensorflow/libs/android/armeabi-v7a"],
    #   ":arm64-v8a": ["-ltensorflowlite", "-L/home/lastchance/Desktop/ModuleAPIV2/dispatch/tensorflow/build_tensorflow/libs/android/arm64-v8a"],
    #   ":x86_64": ["-ltensorflowlite", "-Lbuild_tensorflow/libs/android/x86_64"],
    #   "//conditions:default" : ["-ltensorflowlite", "-Lbuild_tensorflow/libs/host", "-Ibuild_tensorflow/tfinc"],
    # }),
    includes = ["build_tensorflow/tfinc/"],
    copts = ["-Ibuild_tensorflow/tfinc/"],
    deps = ["//dispatch/core:capi"],
    linkstatic = True,
    alwayslink = True,
)


