

FRAMEWORK_DEPS = [
    "@com_google_googletest//:gtest_main",
]

cc_test(
  name = "local_dispatching_test",
  size = "small",
  srcs = ["local_dispatching_test.cc"],
  deps = [
    "//dispatch/core:local_dispatching",
  ] + FRAMEWORK_DEPS, 
)

cc_test(
  name = "router_test",
  size = "small",
  srcs = ["router_test.cc"],
  deps = [
    "//dispatch/core:routing",
  ] + FRAMEWORK_DEPS, 
)



filegroup(
  name = "routing_tree_test_data",
  srcs = ["test_config.json"],
)

cc_test(
  name = "routing_tree_test",
  size = "small",
  srcs = ["routing_tree_test.cc"],
  data = ["test_config.json"],
  deps = [
    "//dispatch/core:routing",
    "@bazel_tools//tools/cpp/runfiles",
  ] + FRAMEWORK_DEPS, 
)


# cc_test(
#   name = "shared_queue_test",
#   size = "small",
#   srcs = ["shared_queue_test.cc"],
#   deps = [
#     "//dispatch/core:shared_queue",
#   ] + FRAMEWORK_DEPS, 
# )
