
package(default_visibility = ["//visibility:public"])

FRAMEWORK_DEPS = [
    "@com_google_googletest//:gtest_main",
]

filegroup(
    name = "test_configs",
    srcs = [
        "test_config.json",
        "cpp_runtime_test.json",
        "remote_dispatching_test.json",
    ],
)

cc_test(
  name = "local_dispatching_test",
  size = "small",
  srcs = ["local_dispatching_test.cc"],
  deps = [
    ":test_helpers",
    "//dispatch/core:local_dispatching",
    "//dispatch/core:proto_util",
  ] + FRAMEWORK_DEPS,
)

# ":testmessages_cc_proto",

cc_test(
  name = "module_table_test",
  size = "small",
  srcs = ["module_table_test.cc"],
  deps = [
    ":test_helpers",
    "//dispatch/core:module_table",
  ] + FRAMEWORK_DEPS,
)

cc_test(
  name = "remote_dispatching_test",
  size = "small",
  srcs = ["remote_dispatching_test.cc"],
  deps = [
    ":testmessages_cc_proto",
    "//dispatch/core:capi",
  ] + FRAMEWORK_DEPS,
  data = [
    ":test_configs",
  ]
)

cc_binary(
  name = "remote_server_test",
  srcs = ["remote_server_test.cc"],
  deps = [
    ":testmessages_cc_proto",
    "//dispatch/core:remote_dispatching",
  ] + FRAMEWORK_DEPS,
)

cc_binary(
  name = "remote_client_test",
  srcs = ["remote_client_test.cc"],
  deps = [
    ":testmessages_cc_proto",
    "//dispatch/core:remote_dispatching",
  ] + FRAMEWORK_DEPS,
)

cc_test(
  name = "capi_test",
  size = "small",
  srcs = ["capi_test.cc"],
  deps = [
    "//dispatch/core:capi",
  ] + FRAMEWORK_DEPS,
  data = [
    ":test_configs",
  ]
)

cc_test(
  name = "mutator_test",
  size = "small",
  srcs = ["mutator_test.cc"],
  deps = [
    "//dispatch/core:cpp_modules",
  ] + FRAMEWORK_DEPS,
)

cc_test(
  name = "cpp_runtime_test",
  size = "small",
  srcs = ["cpp_runtime_test.cc"],
  deps = [
    "//dispatch/core:capi",
  ] + FRAMEWORK_DEPS,
  data = [
    ":test_configs",
  ]
)

cc_test(
  name = "router_test",
  size = "small",
  srcs = ["router_test.cc"],
  deps = [
    "//dispatch/core:routing",
  ] + FRAMEWORK_DEPS,
)



filegroup(
  name = "routing_tree_test_data",
  srcs = ["test_config.json"],
)

cc_test(
  name = "routing_tree_test",
  size = "small",
  srcs = ["routing_tree_test.cc"],
  data = ["test_config.json"],
  deps = [
    "//dispatch/core:routing",
    "@bazel_tools//tools/cpp/runfiles",
  ] + FRAMEWORK_DEPS,
)



proto_library(
  name = "testmessages_proto",
  srcs = [
      "testmessages.proto",
  ],
)

cc_proto_library(
  name = "testmessages_cc_proto",
  deps = [":testmessages_proto"],
)

cc_library(
  name = "test_helpers",
  srcs = [
      "test_helpers.cc",
  ],
  hdrs = [
    "test_helpers.hh",
  ],
  deps = [
  # ":testmessages_cc_proto",
  # "//dispatch/core:proto_util",
  ":testmessages_cc_proto",
  "//dispatch/core:logger",
  "//dispatch/core:proto_util",
  "//dispatch/proto:claidservice_cc_proto",
  "//dispatch/proto:claidservice_cc_grpc",
  ] + FRAMEWORK_DEPS,
)

